--- a/css/style.css
+++ b/css/style.css
@@ -129,24 +129,24 @@ section{
 .message{
    position: sticky;
    top:0;
-   max-width: 1200px;
+   max-width: 100%;
    margin:0 auto;
    padding:2rem;
    display: flex;
    align-items: center;
    gap:1rem;
    justify-content: space-between;
-   background-color: var(--yellow);
+   background-color: var(--black);
 }
 
 .message span{
-   font-size: 2rem;
-   color:var(--black);
+   font-size: 3rem;
+   color:var(--white);
 }
 
 .message i{
    font-size: 2.5rem;
-   color:var(--red);
+   color:var(--black);
    cursor: pointer;
 }
 
@@ -764,7 +764,7 @@ section{
 }
 
 .search-form {
-   background-color: var(--bg);
+   background-color: white;
 }
 .search-form form{
    display: flex;
@@ -774,23 +774,24 @@ section{
 .search-form form .box{
 
    width: 100%;
-   border:var(--border);
    padding:1.4rem;
    font-size: 1.8rem;
    color:var(--black);
+   border: 1px solid black;
+   background-color: #EEEEEE;
+   border-radius: 30px;
 }
 
 .search-form form .fa-search{
    width: 6rem;
-   background-color: var(--black);
-   color:var(--white);
+   background-color: transparent;
+   color:var(--black);
    cursor: pointer;
    font-size: 2.5rem;
 }
 
 .search-form form .fa-search:hover{
-   background-color: var(--yellow);
-   color:var(--black);
+   color:var(--yellow);
 }
 .checkout {
    background-color: var(--bg);
